<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewTitle"
        android:id="@+id/textViewTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/startTrivia"
            android:id="@+id/buttonStartTitle"
            android:layout_below="@+id/textViewTitle"
            android:layout_centerHorizontal="true"
            android:onClick="@string/startTrivaOnClick"
            android:layout_marginTop="30dp" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/createQuestion"
            android:id="@+id/buttonCreateQuizQuestion"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/buttonStartTitle"
            android:layout_alignEnd="@+id/buttonStartTitle"
            android:onClick="@string/createQuestionOnClick"
            android:layout_marginTop="30dp" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/deleteQuestions"
            android:id="@+id/buttonDeleteAllMyQuestions"
            android:layout_below="@+id/buttonCreateQuizQuestion"
            android:layout_centerHorizontal="true"
            android:onClick="@string/deleteQuestionsOnClick"
            android:layout_marginTop="30dp" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/exitApp"
            android:id="@+id/buttonExit"
            android:layout_below="@+id/buttonDeleteAllMyQuestions"
            android:layout_alignLeft="@+id/buttonDeleteAllMyQuestions"
            android:layout_alignStart="@+id/buttonDeleteAllMyQuestions"
            android:onClick="@string/exitAppOnClick"
            android:layout_marginTop="30dp" />
    </LinearLayout>
</RelativeLayout>
