<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.group6a_hw03.group6a_hw03.Creaute_Question">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewLoadingImage"
        android:src="@android:drawable/star_big_on"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textViewQuestionNumber"
        android:layout_above="@+id/textViewQuestionText" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonQuit"
        android:layout_alignRight="@+id/buttonNext"
        android:layout_alignEnd="@+id/buttonNext"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionOne"
            android:id="@+id/radioButtonQuestion1"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionTwo"
            android:id="@+id/radioButtonQuestion2"
            android:layout_alignTop="@+id/radioButtonQuestion1"
            android:layout_alignRight="@+id/radioButtonQuestion1"
            android:layout_alignEnd="@+id/radioButtonQuestion1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionThree"
            android:id="@+id/radioButtonQuestion3"
            android:layout_below="@+id/radioButtonQuestion2"
            android:layout_alignRight="@+id/radioButtonQuestion2"
            android:layout_alignEnd="@+id/radioButtonQuestion2" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionFour"
            android:id="@+id/radioButtonQuestion4"
            android:layout_below="@+id/radioButtonQuestion3"
            android:layout_alignRight="@+id/radioButtonQuestion3"
            android:layout_alignEnd="@+id/radioButtonQuestion3" />

    </RadioGroup>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/quitButton"
        android:id="@+id/buttonQuit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="@string/quitOnClick" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/nextButton"
        android:id="@+id/buttonNext"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="@string/nextOnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/questionText"
        android:id="@+id/textViewQuestionText"
        android:layout_above="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/questionNumber"
        android:id="@+id/textViewQuestionNumber"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
