<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.group6a_hw03.group6a_hw03.Results_Activity">

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/quitButton"
        android:id="@+id/buttonQuit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="@string/quitOnClick" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/tryAgainButton"
        android:id="@+id/buttonTryAgain"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:nestedScrollingEnabled="false"
        android:onClick="@string/tryAgainOnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/trivaResults"
        android:id="@+id/textViewTriviaResults"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/correctAnswers"
        android:id="@+id/textViewCorrectAnswers"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textViewTriviaResults"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/moreText"
        android:id="@+id/textViewMoreText"
        android:gravity="center"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="36dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/textViewTriviaResults"
        android:layout_alignRight="@+id/buttonTryAgain"
        android:layout_alignEnd="@+id/buttonTryAgain"
        android:layout_marginTop="74dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textViewPercentCorrect"
            android:layout_below="@+id/textViewCorrectAnswers"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp"
            android:layout_weight=".05"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarCorrectAnswers"
            android:layout_marginTop="25dp"
            android:layout_alignTop="@+id/textViewPercentCorrect"
            android:layout_alignRight="@+id/buttonTryAgain"
            android:layout_alignEnd="@+id/buttonTryAgain"
            android:layout_weight="1"/>
    </LinearLayout>


</RelativeLayout>
