<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.group6a_hw03.group6a_hw03.Trivia_Activity">

    <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="300dp"-->
        <!--android:id="@+id/imageViewLoadingImage"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_below="@+id/textViewQuestionNumber"-->
        <!--android:layout_above="@+id/textViewQuestionText"-->
        <!--/>-->

    <!--<RadioGroup-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/radioGroupOptions"-->
        <!--android:layout_above="@+id/buttonQuit"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_marginBottom="89dp">-->

    <!--</RadioGroup>-->

    <!--<Button-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/quitButton"-->
        <!--android:id="@+id/buttonQuit"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:onClick="@string/quitOnClick" />-->

    <!--<Button-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/nextButton"-->
        <!--android:id="@+id/buttonNext"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:onClick="@string/nextOnClick" />-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:text="@string/questionText"-->
        <!--android:id="@+id/textViewQuestionText"-->
        <!--android:layout_above="@+id/radioGroupOptions"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true" />-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:text="@string/questionNumber"-->
        <!--android:id="@+id/textViewQuestionNumber"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true" />-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutQuestionNumber">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/questionNumber"
            android:id="@+id/textViewQuestionNumber" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/relativeLayoutImageDim"
        android:layout_below="@id/relativeLayoutQuestionNumber"
        android:id="@+id/relativeLayoutImage">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageViewLoadingImage"
            android:src="@mipmap/ic_launcher" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarLoadImage"
            style="@style/Base.Widget.AppCompat.DropDownItem.Spinner"
            android:indeterminate="false"
            android:visibility="visible"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutQuestionText"
        android:layout_below="@id/relativeLayoutImage">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/questionText"
            android:id="@+id/textViewQuestionText" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroupOptions"></RadioGroup>
    </LinearLayout>

    <Button
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:text="@string/quitButton"
    android:id="@+id/buttonQuit"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:onClick="@string/quitOnClick" />

    <Button
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:text="@string/nextButton"
    android:id="@+id/buttonNext"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:onClick="@string/nextOnClick" />
</RelativeLayout>